fix: align log details body sections

--- a/gravitee-apim-console-webui/src/management/observability/env-logs/components/env-logs-details/env-logs-details.component.scss
+++ b/gravitee-apim-console-webui/src/management/observability/env-logs/components/env-logs-details/env-logs-details.component.scss
@@ -95,6 +95,7 @@
 
       &--flush {
         margin-top: 0;
+        flex-grow: 1;
       }
     }
 
